b=259682, live bookmarks don't automatically refresh, also add user-pref for refresh timeout, r+a=shaver